--- a/style.css
+++ b/style.css
@@ -4,23 +4,31 @@ body {
 
 #spinner-fullscreen {
   position: absolute;
-  left: 0px;
+  left: 0;
   right: 0;
   top: 0;
   bottom: 0;
   opacity: 0.9;
   font-size: 20;
-  text-align: center;
   z-index: 999;
   background: center no-repeat #ffffff;
+  justify-content: center;
 }
-#spinner-icon {
-  z-index: 1111;  
+
+.flex-container-col {
+  display: flex; /* or inline-flex */
+  flex-direction: column;
+  align-items: center;
 }
-#spinner-elementgroup {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+
+.flex-container-row {
+  display: flex; /* or inline-flex */
+  flex-direction: row;
+  align-items: center;
+/*   align-items: center; */
+}
+.flex-item {
+  flex-grow: 1; /* default 0 */
 }
 
 #output {
@@ -59,10 +67,6 @@ body {
 .CodeMirror-scroll {
   height: initial;
 }
-
-
-
-
 
 #right {
   padding-left: 16px;
