--- a/style.css
+++ b/style.css
@@ -76,14 +76,6 @@ code {
   
 }
 
-/*
-#masterdiv {
-  background-size: 350px;
-  background-image: url("nixos-cccamp2015.png");
-  background-repeat: no-repeat;
-  background-position: right top, left top;
-}*/
-
 #output {
   color: white;
   width: 100%;
@@ -110,6 +102,20 @@ code {
   margin-top: 4px;
 }
 
+#autocheck{
+  color: black;
+  width: 100%;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  /*background-color: rgb(210, 177, 210);*/
+  background-color: rgb(255, 248, 219)
+  order: 1px solid rgba(0,0,0,0.15);
+  padding: 5px;
+  visibility: hidden;
+  resize: vertical;
+  margin-top: 4px;
+}
+
 #right {
   padding-left: 16px;
   padding-right: 16px;
@@ -119,6 +125,7 @@ code {
   right: 0px;
   left: 50%;
   background: rgba(255, 255, 255,0.95);
+  border: 2px dotted rgb(184, 217, 255);
 }
 
 #left {
@@ -131,19 +138,8 @@ code {
   background-repeat: no-repeat;
   background-position: 50% 100%;
   background-color: rgb(250, 250, 250);
+  border: 2px dotted rgb(184, 217, 255);
 }
-
-/*#resize {
-  position: absolute;
-  top: 0px;
-  bottom: 0px;
-  width: 5px;
-  background: rgb(224, 235, 245);
-  left: 50%;
-  right: 50%;
-  z-index: 100;
-  cursor: move;
-}*/
 
 #bar {
   display: block;
@@ -162,11 +158,11 @@ code {
   right: 4;
 }
 
-#kdvjf {
+#question_navigation {
   float: right;
   position: absolute;
   z-index: 1;
-  right: 10px;
+  right: 1px;
 }
 
 
