--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   overflow-y: scroll;
+/*   background-color: rgb(54, 202, 216); */
 }
 
 body {
@@ -90,8 +91,13 @@ code {
 }
 
 #header {
+/*   display: none; */
+  background-color: white;
+  padding-left:  0.8em;
   margin-left:  6px;
   margin-right: 6px;
+  margin-bottom: 6px;
+  opacity: 0.95;
 /*   background-color: green; */
 }
 
@@ -139,7 +145,8 @@ code {
   padding-right: 16px;
   flex-basis: calc(50%);
   background: rgba(255, 255, 255,0.95);
-  border-left: 4px solid rgb(184, 217, 255);
+  border: 1px solid rgb(169, 169, 169);
+/*   border-left: 4px solid rgb(184, 217, 255); */
 }
 
 #questionNavigation {
@@ -171,18 +178,36 @@ code {
   right: 0;
 }
 
-#footer {
-  background-size:cover;
-  background-image: url(layer1.png);
+#footerFG {
+  /*erdhörnschen*/
+  position: fixed;
+  background-image: url(footerFG.png);
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 380px;
-  background-position: bottom;
+  bottom: 0;
+  left: 40px;
+  width: 800px;
+  height: 150px;
+  z-index: -10;
+  margin: 0;
+  padding: 0;
+}
+
+#footerBG {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  background-color: black;
+  z-index: -20;
+  margin: 0;
+  padding: 0;
 }
 
 @media all and (max-width: 800px) {
   /* We tell both sidebars to share a row */
   #middle { flex-direction: column; }
   #left  { order: 3;  padding-top: 10px;   padding-right: 0px;}
-  #right { order: 2; border: 3px dotted rgb(184, 217, 255);}
+  #right { order: 2; }
 }
