--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ body {
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 0;
+  line-height: 1.3;
 }
 
-h1 {
-  margin-top: 0.2em;
-  margin-bottom:  0.2em;
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+  font-weight: 700;
 }
 
 #spinner {
@@ -23,7 +23,7 @@ h1 {
   top: 0;
   bottom: 0;
   opacity: 0.8;
-  font-size: 20;
+  font-size: 20px;
   z-index: 999;
   background: #ffffff;
 }
@@ -71,18 +71,8 @@ code {
 }
 
 .myButton {
-  color: black;
-  text-align: center;
-  display: inline-block;
-  text-decoration: none;
-  cursor: pointer;
-  border-radius: 2px;
-  background-color: #E0EBF6;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   margin: 2px;
   padding: 1px 8px;
-  font-size: initial;
-  line-height: 20px;
 }
 
 .myButton:hover {
@@ -123,20 +113,6 @@ textarea {
   white-space: pre-wrap;
   background-color: rgb(238, 238, 238);
   padding: 5px;
-  resize: vertical;
-  margin-top: 4px;
-  display: none;
-}
-
-#autocheck{
-  color: black;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-  /*background-color: rgb(210, 177, 210);*/
-  background-color: rgb(255, 248, 219)
-  order: 1px solid rgba(0,0,0,0.15);
-  padding: 5px;
-  visibility: hidden;
   resize: vertical;
   margin-top: 4px;
   display: none;
@@ -222,7 +198,7 @@ textarea {
   z-index: 100;
   width: 70px;
   height: 45px;
-  top: 15px;
+  top: 3px;
   right: 12px;
   position: absolute;
   display: none;
