--- a/style.css
+++ b/style.css
@@ -116,6 +116,8 @@ textarea {
   resize: vertical;
   margin-top: 4px;
   display: none;
+  font-family: monospace;
+  font-size: 14px;
 }
 
 #right {
